crates/csl/src/snapshots/csl__test__features.snap
---
source: crates/csl/src/test.rs
expression: "crate::from_node::parse_as::<Features>(::indoc::indoc!(r#\"<features></features>\"#)).expect(\"did not parse\")"
---
Features {}
