crates/csl/src/snapshots/csl__test__intext.snap
---
source: crates/csl/src/test.rs
expression: "crate::from_node::parse_as::<InText>(::indoc::indoc!(r#\"<intext><layout><text variable=\"title\"/></layout></intext>\"#)).expect(\"did not parse\")"
---
InText {
    layout: Layout {
        affixes: None,
        formatting: None,
        delimiter: None,
        elements: [
            Text(
                TextElement {
                    source: Variable(
                        Ordinary(
                            Title,
                        ),
                        Long,
                    ),
                    formatting: None,
                    affixes: None,
                    quotes: false,
                    strip_periods: false,
                    text_case: None,
                    display: None,
                },
            ),
        ],
        locale: [],
    },
}
