crates/csl/src/snapshots/csl__test__missing_info.snap
---
source: crates/csl/src/test.rs
expression: "crate::from_node::parse_as::<Style>(::indoc::indoc!(r#\"\n        <style version=\"1.0.1\" class=\"in-text\">\n            <citation><layout></layout></citation>\n        </style>\n    \"#)).expect_err(\"should have failed with errors\")"
---
CslError(
    [
        InvalidCsl {
            severity: Error,
            range: 0..91,
            message: "Must have exactly one <info>",
            hint: "",
        },
    ],
)
